Watch Live menu added and image resolutions fixed

--- a/code/index.html
+++ b/code/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 2: The News Site</title>
+    <title>Project News Site - Joanna Philips</title>
     <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,15 +28,18 @@
             <li><a href="#sports">Sports</a></li>            
             <li><a href="#tech">Tech</a></li>
             <li class="world">
-              <a href="#">World</a>
+              <a href="">World</a>
               <ul class="dropdown">
-                <li><a href="#">Asia</a></li>
-                <li><a href="#">Africa</a></li>
-                <li><a href="#">Europe</a></li>
-                <li><a href="#">North America</a></li>
-                <li><a href="#">South America</a></li>
+                <li><a href="">Asia</a></li>
+                <li><a href="">Africa</a></li>
+                <li><a href="">Europe</a></li>
+                <li><a href="">North America</a></li>
+                <li><a href="">South America</a></li>
               </ul>
             </li>
+            <li>
+              <span class="red-dot"></span>
+              <a href="">Watch Live</a></li>
           </div>
         </ul>
         <input type="text" placeholder="Search" id="searchbar">
@@ -57,11 +60,12 @@
       <div class="big-news-box">
         <a target="_blank" href="https://www.bbc.com/news/science-environment-63121338">
           <h2 class="big-news-title">Three scientists win Nobel for chemistry 'Lego'</h2>
-          <img class="big-news-image" src="https://images.unsplash.com/photo-1567607703202-0bf728b59e09?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80"/>
+          <img class="big-news-image" src="https://images.unsplash.com/photo-1659975045301-b213fab4058b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1632&q=80"/>
         </a>
       </div>
     </section>
 
+    
     <section class="grid-container">
     <!-- Other news  -->
     <h2 class="subheading" id="other-news">News</h2>
@@ -163,6 +167,7 @@
           </a>
         </div>  
       </section>
+     
     </section>
     <footer class ="footer">Copyright 2022 Stockholm Times. Credits: News articles taken from BBC.com</footer>
     <script class ="display-date" src="date.js"></script>
