--- a/code/index.html
+++ b/code/index.html
@@ -6,17 +6,63 @@
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
+
   <body>
-    <header>
+    <header class="nav-bar">
       <!-- Some kind of logo and navbar -->
+      <div class="logo-container">
+        <img class="logo" src="path/to/logo/image" alt="logo" />
+      </div>
+      <h1>Music News</h1>
+      <nav class="nav">
+        <a class="nav-item" href="path/to/subpage">First link</a>
+        <a class="nav-item" href="path/to/subpage">Second link</a>
+        <a class="nav-item" href="path/to/subpage">Third link</a>
+      </nav>
     </header>
 
-    <section class="big-news">
+    <section class="big-news-container">
       <!-- The big news content -->
+        <div class="grid-item big-news-image">Put main news image here</div>
+        <div class="grid-item big-news-text">
+          <h2>Text about main news</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt ut labore et dolore magna 
+            aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
+            ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+            Duis aute irure dolor in reprehenderit in voluptate velit 
+            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint 
+            occaecat cupidatat non proident, sunt in culpa qui officia 
+            deserunt mollit anim id est laborum.</p>
+        </div>        
     </section>
 
-    <section class="">
+    <section class="smaller-news-grid">
       <!-- The other news  -->
+      <div class="grid-item small-news">☀️ 
+          <h3>news 1</h3>
+      </div>
+      <div class="grid-item small-news">☀️ 
+          <h3>news 2</h3></div>
+      <div class="grid-item small-news">☀️ 
+          <h3>news 3</h3>
+      </div>
+      <div class="grid-item small-news">☀️ 
+          <h3>news 4</h3>
+      </div>
+      <div class="grid-item small-news">☀️ 
+          <h3>news 5</h3>
+      </div>
+      <div class="grid-item small-news">☀️ 
+          <h3>news 6</h3>
+      </div>
+      <div class="grid-item small-news">☀️ 
+          <h3>news 7</h3>
+      </div>
+      <div class="grid-item small-news">☀️ 
+      <h3>news 8</h3> 
+      </div>
     </section>
+
   </body>
 </html>
