structured my code-files

--- a/code/index.html
+++ b/code/index.html
@@ -19,8 +19,8 @@
       <div class="hamburger"></div> 
       
       <div class="menu">MENU</div>
-       <nav class="navbar">
-          <ul>
+       <nav>
+          <ul class="navbar">
             <li> <a href="#">Home</a></li>
             <li> <a href="#">About us</a></li>
             <li> <a href="#">Contact</a></li>
