updated layout for tablet

--- a/code/index.html
+++ b/code/index.html
@@ -24,10 +24,10 @@
         </div>
         <nav>
           <ul>
-            <li><a href="#">Home</a> </li>
-            <li><a href="#">News</a> </li>
-            <li><a href="#">Contact</a> </li>
-            <li><a href="#">About</a> </li>
+            <li><a href="example">Home</a> </li>
+            <li><a href="example">News</a> </li>
+            <li><a href="example">Contact</a> </li>
+            <li><a href="example">About</a> </li>
             </ul>
         </nav>
         </label>  
