updated grid and added big news image

--- a/code/index.html
+++ b/code/index.html
@@ -21,47 +21,75 @@
       </nav>
     </header>
 
-    <section class="big-news-container">
+    <section class="news-container">
       <!-- The big news content -->
-        <div class="grid-item big-news-image">Put main news image here</div>
+        <div class="grid-item big-news-image">
+          <img class="big-image" src="wendywei.jpg" alt="picture of musician" />
+        </div>
+
         <div class="grid-item big-news-text">
           <h2>Text about main news</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            <p class="big-news-paragraph">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt ut labore et dolore magna 
-            aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
-            ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-            Duis aute irure dolor in reprehenderit in voluptate velit 
-            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint 
-            occaecat cupidatat non proident, sunt in culpa qui officia 
-            deserunt mollit anim id est laborum.</p>
-        </div>        
+            aliqua. Massa placerat duis ultricies lacus sed turpis 
+            tincidunt id. Eu facilisis sed odio morbi quis commodo 
+            odio. Ridiculus mus mauris vitae ultricies leo. Amet est
+            placerat in egestas erat imperdiet. Quis commodo odio 
+            aenean sed adipiscing diam. Nisl suscipit adipiscing 
+            bibendum est ultricies integer quis auctor. Massa id 
+            neque aliquam vestibulum morbi blandit cursus risus at. 
+            Id diam maecenas ultricies mi eget mauris pharetra et 
+            ultrices. Condimentum lacinia quis vel eros. Volutpat 
+            ac tincidunt vitae semper. Neque ornare aenean euismod 
+            elementum nisi quis eleifend. Sodales ut etiam sit amet 
+            nisl purus in mollis nunc. Risus ultricies tristique 
+            nulla aliquet enim. Leo a diam sollicitudin tempor id eu. 
+            Vitae congue mauris rhoncus aenean vel elit scelerisque.
+            </p>
+        </div>   
+
+        <!-- The other news  -->
+      <div class="grid-item small-news-one">☀️ 
+        <h3>news 1</h3>
+        <p class="small-news-text">Erat velit scelerisque in dictum non consectetur a. 
+          Semper quis lectus nulla at volutpat diam ut venenatis. 
+          Consectetur adipiscing elit ut aliquam. </p>
+      </div>
+      <div class="grid-item small-news-two">☀️ 
+        <h3>news 2</h3></div>
+
+      <div class="grid-item small-news-three">☀️ 
+        <h3>news 3</h3>
+        <p class="small-news-text">Elementum curabitur vitae nunc sed velit dignissim sodales ut eu. 
+          Etiam sit amet nisl purus in mollis nunc sed id.</p>
+      </div>
+      <div class="grid-item small-news-four">☀️ 
+        <h3>news 4</h3>
+        <p class="small-news-text">Quam elementum pulvinar etiam non quam lacus suspendisse 
+          faucibus interdum.</p>
+      </div>
+      <div class="grid-item small-news-five">☀️ 
+        <h3>news 5</h3>
+      </div>
+      <div class="grid-item small-news-six">☀️ 
+        <h3>news 6</h3>
+        <p class="small-news-text">Volutpat ac tincidunt vitae semper quis lectus nulla 
+          at volutpat.</p>
+      </div>
+      <div class="grid-item small-news-seven">☀️ 
+        <h3>news 7</h3>
+      </div>
+      <div class="grid-item small-news-eight">☀️ 
+        <h3>news 8</h3> 
+      <p class="small-news-text">Aliquam id diam maecenas ultricies mi eget. </p>
+      </div>     
     </section>
 
+
+    <!--Remove this if new grid works out-->
     <section class="smaller-news-grid">
       <!-- The other news  -->
-      <div class="grid-item small-news">☀️ 
-          <h3>news 1</h3>
-      </div>
-      <div class="grid-item small-news">☀️ 
-          <h3>news 2</h3></div>
-      <div class="grid-item small-news">☀️ 
-          <h3>news 3</h3>
-      </div>
-      <div class="grid-item small-news">☀️ 
-          <h3>news 4</h3>
-      </div>
-      <div class="grid-item small-news">☀️ 
-          <h3>news 5</h3>
-      </div>
-      <div class="grid-item small-news">☀️ 
-          <h3>news 6</h3>
-      </div>
-      <div class="grid-item small-news">☀️ 
-          <h3>news 7</h3>
-      </div>
-      <div class="grid-item small-news">☀️ 
-      <h3>news 8</h3> 
-      </div>
     </section>
 
   </body>
