added big-news section and styled it with grid

--- a/code/index.html
+++ b/code/index.html
@@ -30,7 +30,13 @@
 
   <section class="big-news">
       <!-- The big news content -->
-  </section>
+      <div class="grid-item big-grid-item">*</div>
+      <div class="grid-item medium-grid-item">*</div>
+      <div class="grid-item medium-grid-item">*</div>
+      <div class="grid-item">*</div>
+      <div class="grid-item">*</div>
+      <div class="grid-item lonely-grid-item">*</div>
+    </section>
 
     <section class="">
       <!-- The other news  -->
