big news section added grid items

--- a/code/index.html
+++ b/code/index.html
@@ -30,7 +30,9 @@
 
   <section class="big-news">
       <!-- The big news content -->
-      <div class="grid-item big-grid-item">*</div>
+      <div class="grid-item big-grid-item">
+        <img src="/project-news-site/assets/pexels-lumn-406014.jpg" />
+      </div>
       <div class="grid-item medium-grid-item">*</div>
       <div class="grid-item medium-grid-item">*</div>
       <div class="grid-item">*</div>
