Add font-families and border container

--- a/code/quotes.html
+++ b/code/quotes.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&family=Rubik+Gemstones&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./style.css" />
     <title>Technigo News Site - Michelle Wegler</title>
   </head>
@@ -41,11 +45,12 @@
           </div>
         </div>
       </nav>
-      <h1>Quotes & Memes</h1>
+      <h1>CatZ MagaZine</h1>
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
+      <h2>Quotes & Memes</h2>
     </section>
 
     <section class="">
