--- a/code/index.html
+++ b/code/index.html
@@ -4,10 +4,9 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <link
-      href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&family=Xanh+Mono&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" 
+    href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Newsreader:opsz@6..72&family=PT+Sans+Narrow&family=Rubik+Gemstones&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css" />
     <script
       src="https://kit.fontawesome.com/818262a977.js"
@@ -46,9 +45,9 @@
           </div>
         </div>
       </nav>
-      <h1>Catz Magazine</h1>
+      <h1>CatZ MagaZine</h1>
     </header>
-    <div class="container">
+    <div class="border-container">
       <section class="big-news">
         <!-- The big news content -->
         <div class="container">
@@ -58,8 +57,8 @@
                 <img
                   src="../img/sunSalutatingCat.jpg"
                   class="img-big-news"
-                  alt="Smirre Training App"
-                  title="Smirre Training"
+                  alt="A Cat doing Yoga"
+                  title="Cat Yoga"
                 />
               </div>
             </div>
