--- a/code/tips.html
+++ b/code/tips.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&family=Rubik+Gemstones&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./style.css" />
     <title>Technigo News Site - Michelle Wegler</title>
   </head>
@@ -41,10 +47,11 @@
           </div>
         </div>
       </nav>
-      <h1>Tips</h1>
+      <h1>CatZ MagaZine</h1>
     </header>
 
     <section class="big-news">
+      <h2>Tips</h2>
       <!-- The big news content -->
     </section>
 
