Add big news article

--- a/code/index.html
+++ b/code/index.html
@@ -66,11 +66,11 @@
               <div class="big-news">
                 <h2>The Latest Rage - Yoga for Cats!</h2>
                 <p>
-                  Yoga Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Architecto aperiam odit sed fugit alias, distinctio molestiae
-                  expedita repellendus amet impedit sint sit iure voluptatem
-                  eius quisquam quam atque velit. Cumque?
+                  Cat Yoga is a calm and relaxing yin yoga class that suits everyone. In the presence of our kitty cats, you get to land in yourself. This class gives you the opportunity to feel the body, let the mind rest and receive a recovery on a deep level. This is more important than ever in these times!
+
                 </p>
+                <a href="https://javawhiskers.se/en/cat-yoga/" target="_blank"
+              rel="noopener noreferrer">Come do cat yoga at Java Whiskers</a>
               </div>
             </div>
           </div>
