cleaned up code and comments

--- a/code/index.html
+++ b/code/index.html
@@ -24,7 +24,7 @@
 
     
     <!--Start of GRID with big news article and news cards-->
-    <div class="band">
+    <div class="container">
   
       <!-- grid item, containing cards -->
       <div class="item-1">
@@ -109,7 +109,7 @@
 
      <!-- grid item, containing a card -->
      <div class="item-7">
-      <a href="" class="card">
+      <a href=""class="card">
         <div class="thumb" style="background-image: url('../code/loro3.jpg')"></div>
         <article>
           <h1>Where does the parrot hide the eggs?</h1>
