added basic html-structure

--- a/code/index.html
+++ b/code/index.html
@@ -2,20 +2,52 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, intitial scale=1.0">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
+      <img src="column.png" alt="Ancient column">
+      <h1>Ancient News</h1>
+      <nav>Link</nav>
+      <nav>Link</nav>
+      <nav>Link</nav>
+      <nav>Link</nav>
       <!-- Some kind of logo and navbar -->
     </header>
 
     <section class="big-news">
+      <img src="" alt="Troyan horse">
+      <h2>Troy has fallen!</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sem nulla pharetra diam sit amet. Hendrerit dolor magna eget est lorem ipsum dolor sit amet. Venenatis cras sed felis eget velit aliquet. Egestas egestas fringilla phasellus faucibus scelerisque eleifend. Volutpat lacus laoreet non curabitur gravida arcu ac. Condimentum mattis pellentesque id nibh. Facilisis gravida neque convallis a cras semper auctor. Mauris vitae ultricies leo integer malesuada nunc vel risus commodo. Leo duis ut diam quam nulla porttitor massa id neque. Gravida cum sociis natoque penatibus et magnis dis. Magna eget est lorem ipsum dolor sit amet consectetur.
+      </p>
       <!-- The big news content -->
     </section>
 
-    <section class="">
+    <section class="Other-news">
+      <div class="story-2">
+        <h3>Story 2</h3>
+        <p>Magna eget est lorem ipsum dolor sit amet consectetur.
+        </p>
+      </div>
+
+      <div class="story-3">
+        <h3>Story 3</h3>
+        <p>Purus in massa tempor nec feugiat nisl pretium. Pharetra diam sit amet nisl suscipit adipiscing bibendum est ultricies. Sed risus ultricies tristique nulla. </p>
+      </div>
+
+      <div class="story-4">
+        <h3>Story 4</h3>
+        <p>Tellus integer feugiat scelerisque varius morbi enim nunc faucibus.</p>
+      </div>
+      
+      <div class="story-5">
+        <h3>Story 5</h3>
+        <p>Eget nunc lobortis mattis aliquam faucibus purus in massa. Scelerisque felis imperdiet proin fermentum leo vel orci porta.</p>
+      </div>
+
       <!-- The other news  -->
     </section>
   </body>
