Add magazine logo

--- a/code/index.html
+++ b/code/index.html
@@ -45,7 +45,18 @@
           </div>
         </div>
       </nav>
-      <h1>CatZ MagaZine</h1>
+      <section class="logo-magazine">
+      <div class="kwadrat">
+        <div class="trojkat">
+          <div class="trojkat_bg"></div>
+        </div>
+      </div><h1>CatZ MagaZine</h1>
+      <div class="kwadrat2">
+        <div class="trojkat2">
+          <div class="trojkat_bg2">
+          </div>	
+        </div></div>
+        </section>
     </header>
     <div class="border-container">
       <section class="big-news">
@@ -65,10 +76,21 @@
             <div class="flex-child grid-child-big-news">
               <div class="big-news">
                 <h2>The Latest Rage - Yoga for Cats!</h2>
-                <p>
-                  Cat Yoga is a calm and relaxing yin yoga class that suits everyone. In the presence of our kitty cats, you get to land in yourself. This class gives you the opportunity to feel the body, let the mind rest and receive a recovery on a deep level. This is more important than ever in these times!
-
-                </p>
+ <p>
+                  Cat Yoga is a calm and relaxing yin yoga class that suits everyone. In the presence of our kitty cats, you get to land in yourself. 
+                  This class gives you the opportunity to feel the body, let the mind 
+                  rest and receive a recovery on a deep level. This is more important 
+                  than ever in these times! Live cat yoga — participate from the comfort 
+                  of your own living room. After the success of cat yoga in our cafe, we 
+                  are now launching an exciting new product! In order to welcome more participants,
+                  we will be broadcasting live instructor-led yoga classes from our cat cafe every 
+                  Monday and Tuesday. You participate remotely via computer or mobile. If you have 
+                  a cat friend at home, they will participate based on their desired interest. Book your 
+                  place here on the website by selecting <em>Online Cat Yoga</em>. We close registration 30 minutes 
+                  before the yoga class starts and you who registered will receive an email with a link and 
+                  password about 15 minutes before the start. Dates for the class will be released later and 
+                  we will also eventually offer participants on site in the café. We look forward to meeting you on the yoga mat!</p>
+                <p>Book now!</p>
                 <a href="https://javawhiskers.se/en/cat-yoga/" target="_blank"
               rel="noopener noreferrer">Come do cat yoga at Java Whiskers</a>
               </div>
@@ -76,7 +98,6 @@
           </div>
         </div>
       </section>
-
       <section class="">
         <!-- The other news  -->
         <!-- On desktop-sized screens: four cards in a row, 
