Add magazine logo to all pages

--- a/code/quotes.html
+++ b/code/quotes.html
@@ -45,7 +45,19 @@
           </div>
         </div>
       </nav>
-      <h1>CatZ MagaZine</h1>
+      <section class="logo-magazine">
+        <div class="kwadrat">
+          <div class="trojkat">
+            <div class="trojkat_bg"></div>
+          </div>
+        </div>
+        <h1>CatZ MagaZine</h1>
+        <div class="kwadrat2">
+          <div class="trojkat2">
+            <div class="trojkat_bg2"></div>
+          </div>
+        </div>
+      </section>
     </header>
 
     <section class="big-news">
