--- a/code/index.html
+++ b/code/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  
   <head>
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
@@ -8,69 +9,61 @@
   </head>
 
   <body>
+
     <header>
       <!-- Some kind of logo and navbar -->
-      <nav>
-        <div class="logo"></div>
+      <section class="header-top">
+        <div class="logo">
           <a id="logo" href="index.html">
-          <img src="./logo.webp" alt="logo"/>
+            <img src="./logo.webp" alt="logo"/>
           </a>
           <a id="logotitle" href="index.html">
-          <img src="./goodnews1.png" alt="logotitle"/>
+            <img src="./goodnews1.png" alt="logotitle"/>
           </a>
         </div>
-        <div class="navigation-menu">
-          <a class="navigation-button" href="index.html">Home</a>
-          <a class="navigation-button" href="#">About us</a>
-          <a class="navigation-button" href="#">Contact</a>
-      </div>
-      </nav>
+      </section>
+
+      <section class="header-bottom">
+        <nav>
+            <a class="navigation-link" href="index.html">Home</a>
+            <a class="navigation-link" href="#">About us</a>
+            <a class="navigation-link" href="#">Contact</a>
+        </nav>
+      </section>
+
     </header>
 
-    <section class="big-news">
+    <section class="Grid-Parent-News">
       <!-- The big news content -->
-      <img src="./busystreet.jpg" alt="busy street"/>
-      <h1>Big News</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus consectetur, elit ac aliquet ullamcorper, magna urna lacinia dui, et mattis quam ipsum in erat. Donec mattis interdum orci, et viverra massa eleifend vitae. Mauris semper, odio ac tristique tincidunt, dolor ante laoreet turpis, nec congue metus libero in dolor.</p>
-    </section>
-
-    <section class="other-news">
+      <div class="grid-item grid-item-big">
+        <img src="./busystreet.jpg" alt="busy street"/>
+        <h1>Big News</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus consectetur, elit ac aliquet ullamcorper, magna urna lacinia dui, et mattis quam ipsum in erat. Donec mattis interdum orci, et viverra massa eleifend vitae. Mauris semper, odio ac tristique tincidunt, dolor ante laoreet turpis, nec congue metus libero in dolor.</p>
+      </div>
       <!-- The other news  -->
-      <div class="other-news-card">
-        <a>
+      <div class="grid-item grid-item-small">
           <img src="./sunflowers.jpg" alt="sunflowers"/>
           <h3>Other News 1</h3>
-        </a>
       </div>
-      <div class="other-news-card">
-        <a>
+      <div class="grid-item grid-item-small">
           <img src="./manreading.jpg" alt="Man reading newspapers"/>
           <h3>Other News 2</h3>
-        </a>
       </div>
-      <div class="other-news-card">
-        <a>
+      <div class="grid-item grid-item-small">
         <img src="./hands.jpg" alt="Hands joining together"/>
         <h3>Other News 3</h3>
-        </a>
       </div> 
-      <div class="other-news-card">
-        <a>
+      <div class="grid-item grid-item-small">
         <img src="./newspapers.jpg" alt="Newsapers and magazins on a rack"/>
         <h3>Other News 4</h3>
-        </a>
       </div> 
-      <div class="other-news-card">
-        <a>
+      <div class="grid-item grid-item-small">
         <img src="./work.jpg" alt="Three people working and laughing together"/>
         <h3>Other News 5</h3>
-        </a>
       </div> 
-      <div class="other-news-card">
-        <a>
+      <div class="grid-item grid-item-small">
         <img src="./youth.jpg" alt="Young people in a crowd"/>
         <h3>Other News 6</h3>
-        </a>
       </div> 
     </section>
   </body>
