fixed grids, flexbox and images

--- a/code/index.html
+++ b/code/index.html
@@ -11,24 +11,23 @@
     <header class="nav-bar">
       <!-- Some kind of logo and navbar -->
       <div class="logo-container">
-        <img class="logo" src="path/to/logo/image" alt="logo" />
+        <img class="logo" src="logo.svg" alt="logo"/>
       </div>
-      <h1>Music News</h1>
+      <h1>LIVE MUSIC DAILY</h1>
       <nav class="nav">
         <a class="nav-item" href="path/to/subpage">First link</a>
         <a class="nav-item" href="path/to/subpage">Second link</a>
         <a class="nav-item" href="path/to/subpage">Third link</a>
+        <a class="nav-item" href="path/to/subpage">Fourth link</a>
       </nav>
     </header>
 
-    <section class="news-container">
+<section class="big-news-box">
       <!-- The big news content -->
-        <div class="grid-item big-news-image">
-          <img class="big-image" src="wendywei.jpg" alt="picture of musician" />
-        </div>
-
-        <div class="grid-item big-news-text">
-          <h2>Text about main news</h2>
+          <img class="grid-item big-image" src="wendywei.jpg" alt="picture of musician" />
+        
+          <div class="grid-item big-news-textbox">
+          <h2>Exclusive interview with Laura Knight </h2>
             <p class="big-news-paragraph">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt ut labore et dolore magna 
@@ -48,44 +47,48 @@
             Vitae congue mauris rhoncus aenean vel elit scelerisque.
             </p>
         </div>   
+</section>
 
         <!-- The other news  -->
-      <div class="grid-item small-news-one">☀️ 
-        <h3>news 1</h3>
+<section class="news-grid">
+      <div class="grid-item small-news">
+        <h3>Henry White returns to the stage after five year hiatus</h3>
+        <img class="grid-item small-image" src="male-singer.jpg" alt="picture of male singer" />
         <p class="small-news-text">Erat velit scelerisque in dictum non consectetur a. 
           Semper quis lectus nulla at volutpat diam ut venenatis. 
           Consectetur adipiscing elit ut aliquam. </p>
       </div>
-      <div class="grid-item small-news-two">☀️ 
-        <h3>news 2</h3></div>
+      <div class="grid-item small-news">
+        <h3>Live recordings - lame substite for the real deal or 
+          valueable captured moments?</h3></div>
 
-      <div class="grid-item small-news-three">☀️ 
+      <div class="grid-item small-news">
         <h3>news 3</h3>
         <p class="small-news-text">Elementum curabitur vitae nunc sed velit dignissim sodales ut eu. 
           Etiam sit amet nisl purus in mollis nunc sed id.</p>
       </div>
-      <div class="grid-item small-news-four">☀️ 
+      <div class="grid-item small-news">
         <h3>news 4</h3>
         <p class="small-news-text">Quam elementum pulvinar etiam non quam lacus suspendisse 
           faucibus interdum.</p>
       </div>
-      <div class="grid-item small-news-five">☀️ 
+      <div class="grid-item small-news">
         <h3>news 5</h3>
       </div>
-      <div class="grid-item small-news-six">☀️ 
+      <div class="grid-item small-news">
         <h3>news 6</h3>
         <p class="small-news-text">Volutpat ac tincidunt vitae semper quis lectus nulla 
           at volutpat.</p>
       </div>
-      <div class="grid-item small-news-seven">☀️ 
+      <div class="grid-item small-news">
         <h3>news 7</h3>
       </div>
-      <div class="grid-item small-news-eight">☀️ 
+      <div class="grid-item small-news">
         <h3>news 8</h3> 
       <p class="small-news-text">Aliquam id diam maecenas ultricies mi eget. </p>
       </div>     
-    </section>
-
+</section>
+  
 
     <!--Remove this if new grid works out-->
     <section class="smaller-news-grid">
