added a button to big-news section

--- a/code/index.html
+++ b/code/index.html
@@ -43,6 +43,7 @@
       <p>You will find a lot of inspiration here, we promise!</p>
       <p>Doesn't matter if you want to explore the nature close</p>
       <p>at hand or travel farther, we got you covered!</p>
+      <button>READ MORE</button>
       </div>
       <img src="main-news-image.jpeg" alt="Picture of hiking into sunset">
     </section>
