--- a/code/index.html
+++ b/code/index.html
@@ -2,20 +2,36 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <section class="title-page">
+        <div class="title">Cats and Tats</div>
+        <div class="logo-container">
+          <img src="logo.svg" alt="logo for site">
+        </div>
+          <nav class="navigation">Media</nav>
+      </section>
     </header>
 
     <section class="big-news">
-      <!-- The big news content -->
+       <div class="main-story">
+        <h2>Cat Attack!</h2>
+       </div>
+       <div class="main-story-text">
+          <p1> I thought I'd be able to put my own pictures in here, but it turns out that would be really difficult I think! So we're doing this instead. Hopefully there are stock images of both cats and tattoos or else my web page name makes no sense!</p1> 
+       </div>
     </section>
 
-    <section class="">
+    <section class="small-news">
+      <h3>Here's a tattoo!</h3>
+      <h3>Here's a cat too!</h3>
+      <h3>More tats!</h3>
+      <h3>More cats!</h3>
       <!-- The other news  -->
     </section>
   </body>
