--- a/code/index.html
+++ b/code/index.html
@@ -45,7 +45,9 @@
       <p>at hand or travel farther, we got you covered!</p>
       <button>READ MORE</button>
       </div>
+      <div class="image-box-main">
       <img src="main-news-image.jpeg" alt="Picture of hiking into sunset">
+      </div>
     </section>
 
       <!-- The news boxes  -->
