--- a/code/index.html
+++ b/code/index.html
@@ -33,17 +33,26 @@
       <!-- The big news content -->
       <figure class="big-news-item grid-item-1">
         <img src="/project-news-site/assets/pexels-lumn-406014.jpg" class="grid__img" alt="">
-      <figure>
-      <figure class="big-news-item grid-item-2"> <img src="/project-news-site/assets/blackboston.jpg" class="grid__img" alt=""> <figure>
-      <figure class="big-news-item grid-item-3"> <img src="/project-news-site/assets/blinkingpuppy.jpg" class="big-news-item grid__img" class="grid__img" alt=""> <figure>
-      <figure class="big-news-item grid-item-5"> <img src="/project-news-site/assets/dogbomberjacket.jpg" class="grid__img" alt=""> </figure>
-      <figure class="big-news-item grid-item-6"> <img src="/project-news-site/assets/dogwithhat.jpg" class="grid__img" alt=""> </figure>
-      <figure class="big-news-item grid-item-7"> <img src="/project-news-site/assets/dogfood.jpg" class="grid__img" alt=""> </figure>
+        </figure>
+      <figure class="big-news-item grid-item-2"> <img src="/project-news-site/assets/blackboston.jpg" class="grid__img" alt="">
+        </figure>
+      <figure class="big-news-item grid-item-3"> <img src="/project-news-site/assets/blinkingpuppy.jpg" class="grid__img" alt="">
+        </figure>
+      <figure class="big-news-item grid-item-5"> <img src="/project-news-site/assets/dogbomberjacket.jpg" class="grid__img" alt="">
+        </figure>
+      <figure class="big-news-item grid-item-6"> <img src="/project-news-site/assets/dogwithhat.jpg" class="grid__img" alt="">
+        </figure>
+      <figure class="big-news-item grid-item-7"> <img src="/project-news-site/assets/dogfood.jpg" class="grid__img" alt="">
+        </figure>
       <figure class="big-news-item grid-item-8"> <img src="/project-news-site/assets/pexels-amy-mccormack-5463180.jpg" alt=""> </figure>
-      <figure class="big-news-item grid-item-9"> <img src="/project-news-site/assets/pexels-lumn-406014.jpg" class="grid__img" alt=""> </figure>
-      <figure class="big-news-item grid-item-10"> <img src="/project-news-site/assets/taxmedtröja.jpg" class="grid__img" alt=""> </figure>
-      <figure class="big-news-item grid-item-11"> <img src="/project-news-site/assets/unicorndog.jpg" class="grid__img" alt=""> </figure>
-      <figure class="big-news-item grid-item-12"> <img src="/project-news-site/assets/winteriscoming.jpg" class="grid__img" alt=""> </figure>
+    <figure class="big-news-item grid-item-9"> <img src="/project-news-site/assets/pexels-lumn-406014.jpg" class="grid__img" alt="">
+        </figure>
+    <figure class="big-news-item grid-item-10"> <img src="/project-news-site/assets/taxmedtröja.jpg" class="grid__img" alt="">
+        </figure>
+    <figure class="big-news-item grid-item-11"> <img src="/project-news-site/assets/unicorndog.jpg" class="grid__img" alt="">
+        </figure>
+    <figure class="big-news-item grid-item-12"> <img src="/project-news-site/assets/winteriscoming.jpg" class="grid__img" alt="">
+     </figure>
   </section>
 
     <section class="">
