Mobile view fix for big news box

--- a/code/index.html
+++ b/code/index.html
@@ -71,15 +71,30 @@
       <span id="month">month</span>
       <span id="year">0000</span>
     </div>
-    <!-- The big news content -->
+
+    <!--The big news content -->
     <section class="big-news">
-      <div class="big-news-box">
+      <div class="big-news-box">        
         <a target="_blank" href="https://www.bbc.com/news/science-environment-63121338">
           <h2 class="big-news-title">Three scientists win Nobel for chemistry 'Lego'</h2>
           <img class="big-news-image" src="https://images.unsplash.com/photo-1659975045301-b213fab4058b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1632&q=80" />
         </a>
       </div>
     </section>
+
+    <!--<section class="big-news">
+       <div class="big-news-box">
+        <a target="_blank" href="https://www.bbc.com/news/science-environment-63121338">
+          <h2 class="big-news-title">Three scientists win Nobel for chemistry 'Lego'</h2>
+          <video width="1500" height="800" autoplay="autoplay" loop="true" controls muted>
+            <source src="video2.mp4" type="video/mp4">
+            
+          Your browser does not support the video tag.
+          </video>
+        </a>
+      </div>
+    </section> --> 
+
     <section class="grid-container">
       <!-- Other news  -->
       <h2 class="subheading" id="other-news">News</h2>
